# ical-timetable-exporter

./: .gitignore  README.md  pyproject.toml  setup.py
timetable_exporter/: __main__.py  cli.py  excel_reader.py  ical_generator.py
timetable_exporter/config/: mapping.json
