[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timetable_exporter"
version = "0.1.0"
description = "A module to generate iCal files from timetabling Excel sheets."
authors = [
    { name = "Zach Milgate", email = "your.email@example.com" }
]
dependencies = [
    "pandas",
    "requests",
    "icalendar",
    "openpyxl"
]

[project.scripts]
timetable-exporter = "timetable_exporter.cli:timetable_exporter"